# pntr_app_starter

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  api.json  main.c  package.json
.cmake/: FindSDL2.cmake  Findlibretrocommon.cmake  Findlibretrodeps.cmake  Findpntr_app.cmake  Findpntr_app_starter.cmake  Makefile.libretro  README.md
.pntr_app_starter/: FindSDL2.cmake  FindSDL2_mixer.cmake  Findlibretrocommon.cmake  Findpntr.cmake  Findpntr_app.cmake  Findpntr_app_starter.cmake  Findraylib.cmake  Makefile.common  shell.html
src/: main.c
tools/: gen_api.mjs
